--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           
 
             </div>
-              <a href="https://www.google.com/maps/@/data=!4m5!7m4!1m2!1s113299524441087388248!2sChZNSlU3M2VGSjRoMEE3NV9iTXVnWFdREggHBhoQYNOYww%3D%3D!2e2?hl=en" class="flex items-center justify-between px-4 py-2 rounded-lg border border-gray-200 bg-gray-50 hover:bg-gray-100 transition"> 
+              <a href="https://maps.app.goo.gl/kz9nW1JMSaiNmyAL6" class="flex items-center justify-between px-4 py-2 rounded-lg border border-gray-200 bg-gray-50 hover:bg-gray-100 transition"> 
 
                      <span>ناونیشان</span>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon h-5  w-5 " viewBox="0 0 24 24"><path fill="#dc2626" d="M12 20.556q-.235 0-.47-.077q-.234-.077-.432-.25q-1.067-.98-2.163-2.185q-1.097-1.204-1.992-2.493q-.895-1.29-1.467-2.633q-.572-1.343-.572-2.622q0-3.173 2.066-5.234Q9.037 3 12 3t5.03 2.062q2.066 2.061 2.066 5.234q0 1.279-.572 2.613q-.572 1.333-1.458 2.632q-.885 1.3-1.981 2.494q-1.097 1.194-2.164 2.175q-.191.173-.434.26q-.244.086-.487.086Zm.003-8.825q.668 0 1.14-.476q.472-.475.472-1.143t-.475-1.14q-.476-.472-1.143-.472t-1.14.476q-.472.475-.472 1.143t.475 1.14q.476.472 1.143.472Z"></path></svg>
